...
  }

  return (
    <KeyboardAvoidingView className="flex-1">
      <View className="flex-1 flex flex-col justify-center p-6">
        <AuthCard
          title="Enter code"
          description={`We sent a 6-digit code to ${email}`}
        >
          <OtpInput
            ref={otpRef}
            onTextChange={(text) => {
              setOtp(text);
...
